--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,12 @@
+# config/routes.yaml
+
 controllers:
     resource:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+# Redirige vers la page de login
+index:
+    path: /
+    controller: App\Controller\SecurityController::redirectToLogin
