--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "knplabs/knp-paginator-bundle": "^6.6",
+        "nelmio/cors-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.32",
         "symfony/asset": "7.0.*",
@@ -39,6 +40,7 @@
         "symfony/string": "7.0.*",
         "symfony/translation": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
+        "symfony/ux-autocomplete": "*",
         "symfony/ux-turbo": "^2.21",
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
