modification de la searchbar + debut de la carte bancaire

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -6,6 +6,9 @@ framework:
     # Note that the session will be started ONLY if you read or write from it.
     session: true
 
+    profiler:
+        only_exceptions: false
+
     #esi: true
     #fragments: true
 
