--- a/composer.json
+++ b/composer.json
@@ -41,10 +41,12 @@
         "symfony/translation": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/ux-autocomplete": "*",
-        "symfony/ux-turbo": "^2.21",
+        "symfony/ux-live-component": "*",
+        "symfony/ux-turbo": "*",
+        "symfony/ux-twig-component": "*",
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
-        "symfony/webpack-encore-bundle": "^2.2",
+        "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -106,7 +108,7 @@
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/debug-bundle": "7.0.*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "*",
         "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "7.0.*",
         "symfony/web-profiler-bundle": "7.0.*"
