--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "symfony/string": "7.0.*",
         "symfony/translation": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
+        "symfony/twig-pack": "*",
         "symfony/ux-autocomplete": "*",
         "symfony/ux-live-component": "*",
         "symfony/ux-turbo": "*",
