--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,3 +1,5 @@
+# config/services.yaml
+
 # This file is the entry point to configure your own services.
 # Files in the packages/ subdirectory configure your dependencies.
 
@@ -19,6 +21,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    # Register the LoginSuccessHandler
+    App\Security\LoginSuccessHandler:
+        arguments:
+            $router: '@router'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
